fixes and new scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,24 @@ body {
   right: 0px;
   margin: auto;
 }
-  
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #75B5AA;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #75B5AACC;
+}
+
 .main {
     display: inline-block;
     border-style: solid;
@@ -33,8 +50,8 @@ body {
     transform: translate(-50%, -50%);
     width: 700px;
     height: 450px;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 96%;
+    max-height: 96%;
     background-color: #151515;
     opacity: 95%;
     overflow-y: auto;
